// Vitest Snapshot v1

exports[`scrollbar > custom value to unit 1`] = `
"/* layer: default */
.scrollbar-thumb-radius-2px{--scrollbar-thumb-raidus:2px;}
.scrollbar-w-1{--scrollbar-width:2px;}"
`;

exports[`scrollbar > scrollbar 1`] = `
"/* layer: default */

  .scrollbar {
    --scrollbar-track: #f5f5f5;
    --scrollbar-thumb: #ddd;
    --scrollbar-width: 8px;
    --scrollbar-height: 8px;
    --scrollbar-track-raidus: 4px;
    --scrollbar-thumb-raidus: 4px;
    overflow: auto;
    scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track);
  }
  .scrollbar::-webkit-scrollbar-track {
    background: var(--scrollbar-track);
  }
  .scrollbar::-webkit-scrollbar-thumb {
    background: var(--scrollbar-thumb);
  }
  .scrollbar::-webkit-scrollbar {
    width: var(--scrollbar-width);
    height: var(--scrollbar-height);
  }


  .scrollbar-rounded::-webkit-scrollbar-track {
      border-radius: var(--scrollbar-track-raidus);
    }
  .scrollbar-rounded::-webkit-scrollbar-thumb {
    border-radius: var(--scrollbar-thumb-raidus);
  }

.scrollbar-radius-2{--scrollbar-track-raidus:0.5rem;--scrollbar-thumb-raidus:0.5rem;}
.scrollbar-w-4px{--scrollbar-width:4px;}"
`;

exports[`scrollbar > scrollbar color 1`] = `
"/* layer: default */
.scrollbar-track-color-red{--un-scrollbar-track-opacity:1;--scrollbar-track:rgba(248,113,113,var(--un-scrollbar-track-opacity));}"
`;

exports[`scrollbar > scrollbar custom unit 1`] = `
"/* layer: default */
.scrollbar-w-1px{--scrollbar-width:1px;}"
`;

exports[`scrollbar > should work in atributify mode 1`] = `
"/* layer: default */
.w-4px{width:4px;}
.rounded{border-radius:0.25rem;}

  .scrollbar {
    --scrollbar-track: #f5f5f5;
    --scrollbar-thumb: #ddd;
    --scrollbar-width: 8px;
    --scrollbar-height: 8px;
    --scrollbar-track-raidus: 4px;
    --scrollbar-thumb-raidus: 4px;
    overflow: auto;
    scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track);
  }
  .scrollbar::-webkit-scrollbar-track {
    background: var(--scrollbar-track);
  }
  .scrollbar::-webkit-scrollbar-thumb {
    background: var(--scrollbar-thumb);
  }
  .scrollbar::-webkit-scrollbar {
    width: var(--scrollbar-width);
    height: var(--scrollbar-height);
  }


  [scrollbar~=\\"\\\\~\\"] {
    --scrollbar-track: #f5f5f5;
    --scrollbar-thumb: #ddd;
    --scrollbar-width: 8px;
    --scrollbar-height: 8px;
    --scrollbar-track-raidus: 4px;
    --scrollbar-thumb-raidus: 4px;
    overflow: auto;
    scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track);
  }
  [scrollbar~=\\"\\\\~\\"]::-webkit-scrollbar-track {
    background: var(--scrollbar-track);
  }
  [scrollbar~=\\"\\\\~\\"]::-webkit-scrollbar-thumb {
    background: var(--scrollbar-thumb);
  }
  [scrollbar~=\\"\\\\~\\"]::-webkit-scrollbar {
    width: var(--scrollbar-width);
    height: var(--scrollbar-height);
  }


  [scrollbar~=\\"rounded\\"]::-webkit-scrollbar-track {
      border-radius: var(--scrollbar-track-raidus);
    }
  [scrollbar~=\\"rounded\\"]::-webkit-scrollbar-thumb {
    border-radius: var(--scrollbar-thumb-raidus);
  }

[scrollbar~=\\"radius-2\\"]{--scrollbar-track-raidus:0.5rem;--scrollbar-thumb-raidus:0.5rem;}
[scrollbar~=\\"w-4px\\"]{--scrollbar-width:4px;}"
`;
